# mindus

./: .gitignore  Cargo.toml  README.md  build.rs  log
lemu/: Cargo.toml  README.md  speed.mlog  yes.mlog
lemu/src/: celliterate.mlog  code.rs  executor.rs  fib.mlog  hello.mlog  instructions.rs  lexer.rs  lib.rs  main.rs  memory.rs  numbers.mlog  parser.rs  primes.mlog
lemu/src/debug/: info.rs  mod.rs  printable.rs
lemu/src/executor/: builder.rs  mod.rs
lemu/src/instructions/: cop.rs  draw.rs  io.rs  mod.rs  mop.rs  mop2.rs
lemu/src/parser/: error.rs  mod.rs
mindus/: Cargo.toml  build.rs
mindus/src/: color_mapped  color_mapping.rs  colors  content.rs  lib.rs  team.rs  unit.rs
mindus/src/block/: content.rs  distribution.rs  drills.rs  liquid.rs  logic.rs  mod.rs  payload.rs  power.rs  production.rs  ratios.rs  turrets.rs  units.rs  x.rs
mindus/src/data/: autotile.rs  command.rs  dynamic.rs  entity_mapping.rs  map.rs  mod.rs  renderer.rs  schematic.rs
mindus/src/exe/: draw.rs  map.rs  mod.rs
mindus/src/item/: storage.rs
mindus/src/utils/: array.rs  mod.rs
mindus/src/utils/image/: holder.rs  mod.rs
p2s/: .gitignore  Cargo.toml  README.md
p2s/src/: main.rs
src/: lib.rs
src/block/: defense.rs  distribution.rs  drills.rs  liquid.rs  logic.rs  mod.rs  payload.rs  power.rs  production.rs  simple.rs  turrets.rs  units.rs  walls.rs
src/data/: autotile.rs  dynamic.rs  map.rs  mod.rs  renderer.rs  schematic.rs
src/exe/: logic.rs  map.rs  mod.rs
src/logic/: executor.rs  instructions.rs  lexer.rs  memory.rs  mod.rs  parser.rs
src/unit/: mod.rs
src/utils/: image.rs  mod.rs
src/utils/image/: affine.rs  holder.rs  mod.rs  overlay.rs
