[package]
name = "lemu"
version = "0.2.10"
edition = "2021"
description = "M-LOG runner"
authors = ["bend-n <bend.n@outlook.com>"]
repository = "https://github.com/bend-n/mindus.git"
license = "MIT"
readme = "README.md"
keywords = ["mindustry", "logic", "emulator", "executor"]

[dependencies]
thiserror = "1.0"
enum_dispatch = "0.3"
fimg = { version = "0.4.3", default-features = false }
logos = "0.13.0"
rust-fuzzy-search = { version = "0.1.1", optional = true }
beef = "0.5"
lerr = { version = "0.1.5", optional = true }
comat = { version = "0.1.2", optional = true }

[features]
bin = ["fimg/save", "diagnose"]
diagnose = ["rust-fuzzy-search", "lerr", "comat"]
default = ["bin"]

[[bin]]
name = "lemu"
doc = false
required-features = ["bin"]
path = "src/main.rs"
