[package]
name = "mindus"
version = "5.0.34"
edition = "2021"
description = "A library for working with mindustry data formats (eg schematics and maps) (fork of plandustry)"
authors = [
  "KosmosPrime <5663514+KosmosPrime@users.noreply.github.com>",
  "bend-n <bend.n@outlook.com>",
]
repository = "https://github.com/bend-n/mindus.git"
license = "GPL-3.0"
exclude = [".github/", "items.py"]
readme = "README.md"
keywords = ["mindustry", "format", "drawing"]
rust-version = "1.85"

[dependencies]
flate2 = "1.0"
base64 = "0.21"
paste = "1.0"
strconv = "0.1"
amap = "0.1"
color-hex = "0.2"
thiserror = "1.0"
bobbin-bits = "0.1"
enum_dispatch = "0.3"
phf = { version = "0.11", features = ["macros"] }
fimg = { version = "0.4.33", features = [
  "scale",
  "blur",
  "save",
], default-features = false }
atools = "0.1.6"
either = "1.15.0"

[features]
bin = ["fimg/save"]
square = []
default = ["bin"]

[build-dependencies]
fimg = { version = "0.4.33", features = [
  "scale",
  "blur",
  "save",
], default-features = false }
walkdir = "2"

[[bin]]
name = "mindus"
doc = false
required-features = ["bin"]
path = "src/exe/mod.rs"

[dev-dependencies]
diff = "0.1"

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
